--- a/templates/success.html
+++ b/templates/success.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <div id='sign-in-box'>
+        <!-- Jinja Template -->
         <h2> Login Success </h2><br>
     </div>
 
     <script>
+
     </script>
 
 </body>
