--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             }  )
                 .done(function(result){
                         if(result == "success"){
-                            window.location.href = "success";
+                            window.location.href = "/success?id="+id;
                         }
                         else {
                             alert(result);
