--- a/static/main.css
+++ b/static/main.css
@@ -51,10 +51,9 @@
 }
 
 
-
-#create-account {
+.success-box {
     font-family: "Roboto", sans-serif;
-    position: relative;
+    position: absolute;
     z-index: 1;
     background: #FFFFFF;
     max-width: 360px;
@@ -62,31 +61,4 @@
     padding: 45px;
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
-
-#create-account input {
-    font-family: "Roboto", sans-serif;
-    outline: 0;
-    background: #f2f2f2;
-    width: 100%;
-    border: 0;
-    margin: 0 0 15px;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 14px;
-}
-
-#create-account button {
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    outline: 0;
-    background: #4CAF50;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    color: #FFFFFF;
-    font-size: 14px;
-    transition: all 0.3 ease;
-    cursor: pointer;
 }
